# fshc

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE_MIT  README.md
.config/: nextest.toml
.fleet/: run.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: release-linux.nu  release-macos.nu  release-windows-msi.nu  release-windows.nu  release.nu
src/: fds.rs  main.rs  outcome.rs
src/fds/: windows.rs
tests/: cli_tests.rs  test_helpers.rs  unix_tests.rs  windows_tests.rs
wix/: main.wxs
