[package]
name = "fshc"
version = "1.3.0"
edition = "2024"

repository = "https://github.com/rabbitmq/fshc"

authors = ["Michael Klishin", "Michael Davis", "RabbitMQ Core Team"]

license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive", "help", "color", "cargo"] }
thiserror = "2"
sysexits = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[target.'cfg(any(target_os = "linux"))'.dependencies]
procfs = "0.18"

[target.'cfg(any(target_os = "macos"))'.dependencies]
libproc = "0.14"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.48"
features = [
  "Win32_System_WindowsProgramming",
  "Win32_System_Threading",
  "Win32_Foundation"
]
