[package]
name = "fshc"
version = "1.4.0"
edition = "2024"

repository = "https://github.com/rabbitmq/fshc"

authors = ["Michael Klishin", "Michael Davis", "RabbitMQ Core Team"]

license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive", "help", "color", "cargo"] }
thiserror = "2"
sysexits = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[profile.ci]
inherits = "dev"
debug = 0

[target.'cfg(any(target_os = "linux"))'.dependencies]
procfs = "0.18"

[target.'cfg(any(target_os = "macos"))'.dependencies]
libproc = "0.14"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.61"
features = [
  "Wdk_Foundation",
  "Wdk_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_Foundation"
]

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3"
serde_json = "1"

[[bin]]
name = "target_process"
path = "tests/bin/target_process.rs"
