[package]
name = "fshc"
version = "1.5.0"
edition = "2024"
description = "File and socket handle counter, a modern alternative to handle.exe"

repository = "https://github.com/rabbitmq/fshc"

authors = ["Michael Klishin", "Michael Davis", "RabbitMQ Core Team"]

license = "Apache-2.0"

[features]
default = []
mimalloc = ["dep:mimalloc"]

[dependencies]
clap = { version = "4.5", features = ["derive", "help", "color", "cargo"] }
thiserror = "2.0"
sysexits = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.ci]
inherits = "dev"
debug = 0

[target.'cfg(any(target_os = "linux"))'.dependencies]
procfs = "0.18"

[target.'cfg(any(target_os = "macos"))'.dependencies]
libproc = "0.14"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "0.1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.61"
features = [
  "Wdk_Foundation",
  "Wdk_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_Foundation"
]

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
serde_json = "1.0"

[[bin]]
name = "target_process"
path = "tests/bin/target_process.rs"
